Add shell script to run TrinoQueryTestTool Make TrinoQueryIT only run basic testset and tcph testset