@@ -8,8 +8,25 @@ import java.util.*
 
 plugins {
   `maven-publish`
+  `application`
   id("java")
   id("idea")
+}
+
+tasks.register<JavaExec>("TrinoTest") {
+  classpath = sourceSets["test"].runtimeClasspath
+  systemProperty("gravitino.log.path", buildDir.path + "/integration-test.log")
+  mainClass.set("com.datastrato.gravitino.integration.test.trino.TrinoQueryTestTool")
+
+  if (JavaVersion.current() >= JavaVersion.VERSION_1_8) {
+      jvmArgs = listOf(
+          "--add-opens", "java.base/java.lang=ALL-UNNAMED",
+      )
+  }
+
+  if (project.hasProperty("appArgs")) {
+    args = (project.property("appArgs") as String).removeSurrounding("\"").split(" ")
+  }
 }
 
 dependencies {
